--- a/styles/flower-market.css
+++ b/styles/flower-market.css
@@ -106,5 +106,40 @@
     flex-direction: column;
     gap: 40px;
 }
+/* deals*/
+
+.deals {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+    margin: 0 150px;
+    text-align: center;
+}
+.deals-items {
+    display: flex;
+    align-items: center;
+    max-width: 300px;
+    gap: 20px;
+    margin: 120px 150px;
+}
+
+.btn-2{
+    background-color: none;
+    color: white;
+    border: none;
+    font-size: 16px;
+    underline: 1px solid white;
+}
+/* subscribe section*/
+.subscribe-bg {
+    width: 1500px;
+    height: 400px;
+    margin: none;
+}
+.subscribe-form {
+    text-align: center;
+    padding: 0 0 100px 0;
+}
 
 
