--- a/styles/flower-market.css
+++ b/styles/flower-market.css
@@ -119,40 +119,92 @@
     flex-direction: column;
     gap: 40px;
 }
+.trusted-badge {
+    position: absolute;
+    top: 20;
+    left: 50%;
+    transform: translateX(-60%);
+    width: 250px;
+}
 /* deals*/
-
-.deals {
+.deals{
+    text-align: center;
+    margin: 120px 0;
+}
+.deals-items {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     gap: 20px;
-    margin: 0 150px;
-    text-align: center;
-}
-.deals-items {
-    display: flex;
-    align-items: center;
-    max-width: 300px;
-    gap: 20px;
-    margin: 120px 150px;
+    margin: 0;
 }
 
-.btn-2{
-    background-color: none;
+.deal-item-1{
+    background-color: rgb(0,0,0,0.5);
+    background-image: url('../assets/deal-bloom.png');
+    background-blend-mode: darken;
+    width: 350px;
+    height: 200px;
+    text-align: center;
     color: white;
-    border: none;
-    font-size: 16px;
-    underline: 1px solid white;
+    border-radius: 5px;
+    
 }
+.deal-item-2{
+    background-color: rgb(0,0,0,0.5);
+    background-image: url('../assets/deal-ana.png');
+    background-blend-mode: darken;
+    width: 350px;
+    height: 200px;
+    text-align: center;
+    color: white;   
+    border-radius: 5px;
+
+}
+.deal-item-3{
+    background-color: rgb(0,0,0,0.5);
+    background-image: url('../assets/deal-zabo.png');
+    background-blend-mode: darken;
+    width: 750px;
+    height: 420px;
+    text-align: center;
+    color: white;
+    border-radius: 5px;
+    margin: 15px 0;
+}
+.bg-text{
+    transform: translateY(100%);
+    font-size: 30px;
+}
+.bg-text-1{
+    transform: translateY(100%);
+    font-size: 20px;
+}
+
+
 /* subscribe section*/
-.subscribe-bg {
-    width: 1500px;
-    height: 400px;
-    margin: none;
+.subscribe{
+    background-image: url('../assets/news-letter-bg.png');
+    background-size: cover;
+    background-position: center;
+    text-align: center;
+    width: 100%;
+    height: 500px;
+    margin: 120px 0;
 }
+
 .subscribe-form {
     text-align: center;
-    padding: 0 0 100px 0;
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+}
+.email {
+    padding: 10px;
+    width: 30rem;
+    border: none;
+    border-radius: 5px;
+    font-size: 16px;
 }
 .join{
     color: white;
@@ -174,6 +226,9 @@
 .footer-list{
     list-style-type: none;
     padding: 0;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1.5rem;
 }
 .social-icons {
     display: flex;
