--- a/styles/flower-market.css
+++ b/styles/flower-market.css
@@ -83,8 +83,8 @@
     margin: 50px 0;
 }
 .flower-items {
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
     justify-content: center;
     gap: 20px;
     margin: 0 150px;
@@ -233,6 +233,66 @@
 .social-icons {
     display: flex;
     gap: 3rem;
+}
+
+/* responsive styles */
+@media (max-width: 576px) {
+    .top-bar {
+        justify-content: space-between;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    .nav-links,
+    .trusted-badge{
+        display: none;
+    }
+    .banner {
+        flex-direction: column-reverse;
+        align-items: center;
+        margin: auto;
+    }
+    .banner-text {
+        text-align: left;
+        padding: 50px 0;
+    }
+    .flower-items {
+        grid-template-columns: repeat(2, 1fr);
+        margin: auto
+    }
+    .flower-lovers {
+        flex-direction: column;
+        margin: 50px 20px;
+        gap: 40px;
+        max-width: 350px;
+        max-height: 600px;
+    }
+    .flower-lovers-text {
+        max-height: 200px;
+    }
+    .flower-lovers-list {
+        display: flex;
+        flex-direction: column;
+        gap: 2px;
+    }
+    .deals{
+        margin: 250px 0 0 0;
+    }
+    .email {
+        width: 50%;
+        padding: 10px;
+        font-size: 16px;
+    }
+    .footer{
+        flex-direction: column;
+        align-items: left;
+        margin: 0 20px;
+        padding: 0;
+    }
+    .footer-list {
+        grid-template-columns: repeat(1, 1fr);
+    }
+    
+    
 }
 
 
